--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,8 +25,8 @@ env_logger = "0.7.1"
 mongodb = "1.0.0"
 bson = "1.0.0"
 
+thiserror = "1.0.20"
+async-trait = "0.1.36"
+
 futures = "0.3.5"
 futures-timer = "3.0.2"
-
-pulldown-cmark = "0.7.1"
-human_format = "1.0.3"
