--- a/.github/workflows/codequality.yml
+++ b/.github/workflows/codequality.yml
@@ -14,6 +14,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         run: rustup component add clippy
+      - name: Cache build artifacts
+          id: cache-build
+          uses: actions/cache@v2
+          with:
+            path: target/**
+            key: ${{ runner.os }}-build-cache
       - name: Annotate commit with clippy warnings
         uses: actions-rs/clippy-check@v1
         with:
