--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,5 +15,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: Get build cache
+          id: cache-build
+          uses: actions/cache@v2
+          with:
+            path: target/**
+            key: ${{ runner.os }}-build-cache
       - name: Build
         run: cargo build --verbose
