--- a/.github/workflows/codequality.yml
+++ b/.github/workflows/codequality.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        run: rustup component add clippy
+      - run: rustup component add clippy
       - name: Cache build artifacts
         id: cache-build
         uses: actions/cache@v2
