ci: Added matrix of rust versions, and changed way to install rust toolchain

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,5 +21,11 @@ jobs:
         with:
           path: target/**
           key: ${{ runner.os }}-build-cache
-      - name: Build
-        run: cargo build --verbose
+      - name: Install toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+      - uses: actions-rs/cargo@v1
+        name: Build program
+        with:
+          command: build
