--- a/.github/workflows/codequality.yml
+++ b/.github/workflows/codequality.yml
@@ -13,7 +13,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: rustup component add clippy
+      - name: Install toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+          components: rustfmt, clippy
       - name: Cache build artifacts
         id: cache-build
         uses: actions/cache@v2
