--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,16 +12,28 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
+        rust:
+          - stable
+          - beta
+          - nightly
 
     steps:
       - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        name: Install toolchain
+        with:
+          profile: minimal
+          toolchain: ${{ matrix.rust }}
+          override: true
       - name: Cache build artifacts
         id: cache-build
         uses: actions/cache@v2
         with:
           path: target/**
-          key: ${{ runner.os }}-build-cache
-      - name: Build
-        run: cargo build
-      - name: Run tests
-        run: cargo test --verbose
+          key: ${{ runner.os }}-build-cache-${{ matrix.rust }}
+      - uses: actions-rs/cargo@v1
+        with:
+          command: build
+      - uses: actions-rs/cargo@v1
+        with:
+          command: test
