--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - 27017:27017
     environment:
       MONGO_INITDB_ROOT_USERNAME: toor
-      MONGO_INITDB_ROOT_PASSWORD: fabricateadmin
+      MONGO_INITDB_ROOT_PASSWORD: modrinthadmin
     volumes:
       - mongodb-data:/data/db
   mongo-express:
@@ -17,7 +17,7 @@ services:
       - 8081:8081
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: toor
-      ME_CONFIG_MONGODB_ADMINPASSWORD: fabricateadmin
+      ME_CONFIG_MONGODB_ADMINPASSWORD: modrinthadmin
       ME_CONFIG_OPTIONS_EDITORTHEME: material
   meilisearch:
     image: getmeili/meilisearch
