--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "fabricate"
 version = "0.1.0"
-authors = ["geometrically <jai.a@tuta.io>"]
+#Team members, please add your emails and usernames
+authors = ["geometrically <jai.a@tuta.io>", "Redblueflame <contact@redblueflame.com>", "Adledfyr", "cfanoulis", "jaoh1"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
