--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ INDEX_CURSEFORGE=false
 DEBUG=true
 
 MONGODB_ADDR=mongodb://localhost:27017
-MEILISEARCH_ADDR=
+MEILISEARCH_ADDR=http://localhost:7700
