--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ MONGODB_ADDR=mongodb://localhost:27017
 MEILISEARCH_ADDR=http://localhost:7700
 
 PORT=8000
+
+BACKBLAZE_KEY_ID=none
+BACKBLAZE_KEY=none
+BACKBLAZE_BUCKET_ID=none
