--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fabricate"
+name = "modrinth"
 version = "0.1.0"
 #Team members, please add your emails and usernames
 authors = ["geometrically <jai.a@tuta.io>", "Redblueflame <contact@redblueflame.com>", "Aeledfyr <aeledfyr@gmail.com>", "cfanoulis"]
@@ -31,3 +31,6 @@ async-trait = "0.1.36"
 
 futures = "0.3.5"
 futures-timer = "3.0.2"
+
+base64 = "0.12.3"
+sha1 = {version="0.6.0", features=["std"]}
