--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ meilisearch-sdk = "0.1.4"
 serde_json = "1.0"
 serde = {version="1.0", features=["derive"]}
 chrono = { version = "0.4", features = ["serde"] }
+rand = "0.7"
 
 dotenv = "0.15"
 log = "0.4.8"
