fix: specify bind address instead of port

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ DEBUG=true
 MONGODB_ADDR=mongodb://localhost:27017
 MEILISEARCH_ADDR=http://localhost:7700
 
-PORT=8000
+BIND_ADDR=127.0.0.1:8000
 
 BACKBLAZE_KEY_ID=none
 BACKBLAZE_KEY=none
