--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2018"
 actix-web = "2.0"
 actix-rt = "1.1.1"
 actix-files = "0.2.2"
+actix-multipart = "0.2.0"
 
 reqwest = {version="0.10.6", features=["json"]}
 
@@ -36,3 +37,5 @@ futures-timer = "3.0.2"
 
 base64 = "0.12.3"
 sha1 = {version="0.6.0", features=["std"]}
+
+pulldown-cmark = "0.7.2"
