--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 INDEX_CURSEFORGE=false
 DEBUG=true
 
+CDN_URL=cdn.modrinth.com
+
 MONGODB_ADDR=mongodb://localhost:27017
 MEILISEARCH_ADDR=http://localhost:7700
 
