feat(file-host): implement mock file hosting
This implements a mock file hosting system backed by the system's
filesystem.  It mirrors the API of the backblaze integration, but
puts the files directly on disk in the path specified by the
MOCK_FILE_PATH environment variable (defaults to /tmp/modrinth).

The mock file hosting is enabled by default using cargo features
to allow people to work on modrinth without access to a valid
backblaze account and setup.  To enable backblaze, specify the
cargo feature "backblaze" when running, ex. `cargo run --features
backblaze`.

--- a/.env
+++ b/.env
@@ -8,6 +8,8 @@ MEILISEARCH_ADDR=http://localhost:7700
 
 BIND_ADDR=127.0.0.1:8000
 
+MOCK_FILE_PATH=/tmp/modrinth
+
 BACKBLAZE_KEY_ID=none
 BACKBLAZE_KEY=none
 BACKBLAZE_BUCKET_ID=none
