--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,3 +37,7 @@ futures-timer = "3.0.2"
 
 base64 = "0.12.3"
 sha1 = {version="0.6.0", features=["std"]}
+
+[features]
+default = []
+backblaze = []
