fix: fix auth with docker mongodb

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ DEBUG=true
 
 CDN_URL=cdn.modrinth.com
 
-MONGODB_ADDR=mongodb://localhost:27017
+MONGODB_ADDR=mongodb://toor:modrinthadmin@localhost:27017
 MEILISEARCH_ADDR=http://localhost:7700
 
 BIND_ADDR=127.0.0.1:8000
