--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ reqwest = {version="0.10.6", features=["json"]}
 meilisearch-sdk = "0.1.4"
 
 serde_json = "1.0"
-serde = {version="1.0", features=["derive"]}
+serde = { version = "1.0", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde"] }
 rand = "0.7"
 
@@ -37,6 +37,12 @@ futures-timer = "3.0.2"
 
 base64 = "0.12.3"
 sha1 = {version="0.6.0", features=["std"]}
+
+[dependencies.sqlx]
+git = "https://github.com/launchbadge/sqlx/"
+branch = "master"
+default-features = false
+features = ["runtime-actix", "postgres", "chrono", "offline", "macros"]
 
 [features]
 default = []
