--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ DEBUG=true
 
 CDN_URL=cdn.modrinth.com
 
-DATABASE_URL=postgresql://labrinth@localhost/labrinth
+DATABASE_URL=postgresql://labrinth:this_is_really_secret@localhost/labrinth
 MEILISEARCH_ADDR=http://localhost:7700
 
 BIND_ADDR=127.0.0.1:8000
