--- a/.env
+++ b/.env
@@ -10,6 +10,7 @@ BIND_ADDR=127.0.0.1:8000
 
 MOCK_FILE_PATH=/tmp/modrinth
 
+BACKBLAZE_ENABLED=false
 BACKBLAZE_KEY_ID=none
 BACKBLAZE_KEY=none
 BACKBLAZE_BUCKET_ID=none
