fix: Use SQLX_OFFLINE to force sqlx into offline mode for CI

--- a/.github/workflows/codequality.yml
+++ b/.github/workflows/codequality.yml
@@ -31,3 +31,5 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           args: --all-features
+        env:
+          SQLX_OFFLINE: true
