--- a/.github/workflows/docker-compile.yml
+++ b/.github/workflows/docker-compile.yml
@@ -12,7 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: echo ${GITHUB_SHA::8}
+      - run: echo $TAG
+        env:
+          TAG: ${GITHUB_SHA::8}
       - name: Build, Tag, Push
         uses: mattdavis0351/actions/docker-gpr@v1
         with:
