--- a/.github/workflows/docker-compile.yml
+++ b/.github/workflows/docker-compile.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Get the short sha
         id: short_sha
-        run: echo ::set-output name=SHA::$(echo $GITHUB_REF | cut -c1-8)
+        run: echo ::set-output name=SHA::$(echo $GITHUB_SHA | cut -c1-8)
       - run: echo $TAG
         env:
           TAG: ${{ steps.short_sha.outputs.SHA }}
