feat(indexing): Reindex curseforge & local database at an interval

--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-INDEX_CURSEFORGE=false
 DEBUG=true
 
 CDN_URL=cdn.modrinth.com
@@ -14,3 +13,9 @@ BACKBLAZE_ENABLED=false
 BACKBLAZE_KEY_ID=none
 BACKBLAZE_KEY=none
 BACKBLAZE_BUCKET_ID=none
+
+INDEX_CURSEFORGE=false
+# 1 hour
+LOCAL_INDEX_INTERVAL=3600
+# 4 hours
+EXTERNAL_INDEX_INTERVAL=14400
