feat: Implement more database methods & add mod and version routes

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DEBUG=true
 RUST_LOG=info,sqlx::query=warn
 
-CDN_URL=cdn.modrinth.com
+CDN_URL=https://cdn.modrinth.com
 
 DATABASE_URL=postgresql://labrinth@localhost/labrinth
 MEILISEARCH_ADDR=http://localhost:7700
