--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ actix-web = "2.0"
 actix-rt = "1.1.1"
 actix-files = "0.2.2"
 actix-multipart = "0.2.0"
+actix-cors = "0.2.0"
 
 reqwest = {version="0.10.6", features=["json"]}
 
