feat(migration): Added automatic migration

--- a/.env
+++ b/.env
@@ -3,11 +3,10 @@ RUST_LOG=info,sqlx::query=warn
 
 CDN_URL=https://cdn.modrinth.com
 
-DATABASE_URL=postgresql://labrinth@localhost/labrinth
+DATABASE_URL=postgresql://labrinth:labrinth@localhost/labrinth
 MEILISEARCH_ADDR=http://localhost:7700
 
 BIND_ADDR=127.0.0.1:8000
-
 MOCK_FILE_PATH=/tmp/modrinth
 
 BACKBLAZE_ENABLED=false
