Switched base container for the docker build

--- a/.github/workflows/docker-compile.yml
+++ b/.github/workflows/docker-compile.yml
@@ -2,8 +2,8 @@ name: Docker image build
 
 on:
   push:
-    branches:
-    - !master
+    branches-ignore:
+    - master
   pull_request:
 env:
   CARGO_TERM_COLOR: always
