--- a/.github/workflows/docker-compile-master.yml
+++ b/.github/workflows/docker-compile-master.yml
@@ -16,10 +16,9 @@ jobs:
       - name: Build and push Docker images
         uses: docker/build-push-action@v1
         with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com
-          repository: modrinth/labrinth/labrinth
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: modrinth/labrinth
           tag_with_ref: false
           tags: master
           tag_with_sha: true
