--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 DEBUG=true
 RUST_LOG=info,sqlx::query=warn
 
+CORS_ORIGINS='["http://localhost:3000","https://modrinth.com"]'
 CDN_URL=https://cdn.modrinth.com
 
 DATABASE_URL=postgresql://labrinth:labrinth@localhost/labrinth
