--- a/.env
+++ b/.env
@@ -15,6 +15,13 @@ BACKBLAZE_KEY_ID=none
 BACKBLAZE_KEY=none
 BACKBLAZE_BUCKET_ID=none
 
+S3_ENABLED=false
+S3_ACCESS_TOKEN=none
+S3_SECRET=none
+S3_URL=none
+S3_REGION=none
+S3_BUCKET_NAME=none
+
 INDEX_CURSEFORGE=false
 MAX_CURSEFORGE_ID=450000
 # 1 hour
