--- a/.env
+++ b/.env
@@ -10,12 +10,12 @@ MEILISEARCH_ADDR=http://localhost:7700
 BIND_ADDR=127.0.0.1:8000
 MOCK_FILE_PATH=/tmp/modrinth
 
-BACKBLAZE_ENABLED=false
+STORAGE_BACKEND=local
+
 BACKBLAZE_KEY_ID=none
 BACKBLAZE_KEY=none
 BACKBLAZE_BUCKET_ID=none
 
-S3_ENABLED=false
 S3_ACCESS_TOKEN=none
 S3_SECRET=none
 S3_URL=none
