Support for using a master key

--- a/.env
+++ b/.env
@@ -5,7 +5,9 @@ CORS_ORIGINS='["http://localhost:3000","https://modrinth.com"]'
 CDN_URL=https://cdn.modrinth.com
 
 DATABASE_URL=postgresql://labrinth:labrinth@localhost/labrinth
+
 MEILISEARCH_ADDR=http://localhost:7700
+MEILISEARCH_KEY=modrinth
 
 BIND_ADDR=127.0.0.1:8000
 MOCK_FILE_PATH=/tmp/modrinth
