--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,8 +51,7 @@ branch = "master"
 default-features = false
 features = ["runtime-actix", "postgres", "chrono", "offline"]
 
-
 [dependencies.actix-ratelimit]
-# Temp fork until actix-ratelimit bumps version on cargo
+# Temp until actix-ratelimit bumps version on cargo
 git = "https://github.com/TerminalWitchcraft/actix-ratelimit"
-branch = "master"
+ev = "870822067dfeae7cc0304352d81c4cb79ee27f5a"
