--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,4 +54,4 @@ features = ["runtime-actix", "postgres", "chrono", "offline"]
 [dependencies.actix-ratelimit]
 # Temp until actix-ratelimit bumps version on cargo
 git = "https://github.com/TerminalWitchcraft/actix-ratelimit"
-ev = "870822067dfeae7cc0304352d81c4cb79ee27f5a"
+rev = "870822067dfeae7cc0304352d81c4cb79ee27f5a"
