--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ dotenv = "0.15"
 log = "0.4.8"
 env_logger = "0.8.1"
 thiserror = "1.0.21"
+lazy_static = "1.4.0"
 
 futures = "0.3.6"
 futures-timer = "3.0.2"
