--- a/.env
+++ b/.env
@@ -31,5 +31,7 @@ LOCAL_INDEX_INTERVAL=3600
 # 12 hours
 EXTERNAL_INDEX_INTERVAL=43200
 
+INDEX_CACHE_PATH=/tmp/modrinth-id-cache.json
+
 GITHUB_CLIENT_ID=3acffb2e808d16d4b226
 GITHUB_CLIENT_SECRET=none
