--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ reqwest = { version = "0.10.8", features = ["json"] }
 
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
+serde_with = "1.5.1"
 chrono = { version = "0.4", features = ["serde"] }
 rand = "0.7.3"
 base64 = "0.13.0"
