--- a/.env
+++ b/.env
@@ -35,3 +35,5 @@ INDEX_CACHE_PATH=/tmp/modrinth-id-cache.json
 
 GITHUB_CLIENT_ID=3acffb2e808d16d4b226
 GITHUB_CLIENT_SECRET=none
+
+IP_SALT=labrinth
