Remove name and rename side type

--- a/.env
+++ b/.env
@@ -26,6 +26,8 @@ S3_BUCKET_NAME=none
 
 # 1 hour
 LOCAL_INDEX_INTERVAL=3600
+# 30 minutes
+VERSION_INDEX_INTERVAL=1800
 
 GITHUB_CLIENT_ID=3acffb2e808d16d4b226
 GITHUB_CLIENT_SECRET=none
