--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ rand = "0.7.3"
 base64 = "0.13.0"
 sha1 = { version = "0.6.0", features = ["std"] }
 bitflags = "1.2.1"
+zip = "0.5"
 
 gumdrop = "0.8.0"
 dotenv = "0.15"
