--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ base64 = "0.13.0"
 sha1 = { version = "0.6.0", features = ["std"] }
 sha2 = "0.9.2"
 bitflags = "1.2.1"
+zip = "0.5.12"
 
 gumdrop = "0.8.0"
 dotenv = "0.15"
