Fix parts of legacy API not working

--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ LOCAL_INDEX_INTERVAL=3600
 # 30 minutes
 VERSION_INDEX_INTERVAL=1800
 
-GITHUB_CLIENT_ID=3acffb2e808d16d4b226
+GITHUB_CLIENT_ID=none
 GITHUB_CLIENT_SECRET=none
 
 RATE_LIMIT_IGNORE_IPS='[]'
