--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ SITE_URL=https://modrinth.com
 CDN_URL=https://cdn.modrinth.com
 
 MODERATION_DISCORD_WEBHOOK=
+CLOUDFLARE_INTEGRATION=false
 
 DATABASE_URL=postgresql://labrinth:labrinth@localhost/labrinth
 DATABASE_MIN_CONNECTIONS=0
