Added support for Ignored Hosts

--- a/.env
+++ b/.env
@@ -32,3 +32,4 @@ GITHUB_CLIENT_ID=3acffb2e808d16d4b226
 GITHUB_CLIENT_SECRET=none
 
 RATE_LIMIT_IGNORE_IPS='[]'
+RATE_LIMIT_IGNORE_HOSTS="[\"localhost\"]"
