(part 3/?) cut down some pretty major heap allocations here - more Bytes and BytesMuts, less Vec<u8>s
also I don't really understand why you need to `to_vec` when you don't really use it again afterwards

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,3 +59,5 @@ sentry-actix = "0.22.0"
 
 actix-web-prom = {git = "https://github.com/nlopes/actix-web-prom", branch = "master"}
 prometheus = "0.12.0"
+
+bytes = "0.5.6"
