Add URL validation for pack files

--- a/.env
+++ b/.env
@@ -38,3 +38,5 @@ GITHUB_CLIENT_ID=none
 GITHUB_CLIENT_SECRET=none
 
 RATE_LIMIT_IGNORE_IPS='[]'
+
+WHITELISTED_MODPACK_DOMAINS='["cdn.modrinth.com", "edge.forgecdn.net", "github.com", "raw.githubusercontent.com"]'
