--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ RUST_LOG=info,sqlx::query=warn
 
 SITE_URL=https://modrinth.com
 CDN_URL=https://cdn.modrinth.com
+LABRINTH_ADMIN_KEY=feedbeef
 
 MODERATION_DISCORD_WEBHOOK=
 CLOUDFLARE_INTEGRATION=false
