--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,11 @@ path = "src/main.rs"
 
 [dependencies]
 actix = "0.12.0"
-actix-web = "4.0.0-rc.2"
+actix-web = "4.0.0"
 actix-rt = "2.6.0"
 tokio-stream = "0.1.8"
-actix-multipart = "0.4.0-beta.13"
-actix-cors = "0.6.0-beta.8"
+actix-multipart = "0.4.0"
+actix-cors = "0.6.0"
 
 meilisearch-sdk = "0.6.0"
 reqwest = { version = "0.11.9", features = ["json"] }
@@ -36,6 +36,7 @@ sha1 = { version = "0.6.0", features = ["std"] }
 sha2 = "0.9.2"
 bitflags = "1.2.1"
 zip = "0.5.12"
+itertools = "0.10.3"
 
 validator = { version = "0.13", features = ["derive"] }
 regex = "1.5.4"
