--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ xml-rs = "0.8.3"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_with = "1.5.1"
-chrono = { version = "0.4", features = ["serde"] }
+time = { version = "0.2.27", features = ["serde"] }
 rand = "0.7.3"
 base64 = "0.13.0"
 sha1 = { version = "0.6.0", features = ["std"] }
@@ -56,7 +56,7 @@ futures-timer = "3.0.2"
 rust-s3 = "0.29.0"
 async-trait = "0.1.41"
 
-sqlx = { version = "0.5.10", features = ["runtime-actix-rustls", "postgres", "chrono", "offline", "macros", "migrate"] }
+sqlx = { version = "0.5.10", features = ["runtime-actix-rustls", "postgres", "time", "offline", "macros", "migrate"] }
 
 bytes = "1.1.0"
 
