--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ path = "src/main.rs"
 actix = "0.13.0"
 actix-web = { git = "https://github.com/modrinth/actix-web", rev = "88c7c18" }
 actix-rt = "2.7.0"
+tokio = { version = "1.19.0", features = ["sync"] }
 tokio-stream = "0.1.8"
 actix-multipart = { git = "https://github.com/modrinth/actix-web", rev = "88c7c18" }
 actix-cors = { git = "https://github.com/modrinth/actix-extras.git", rev = "34d301f" }
