--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ RUST_LOG=info,sqlx::query=warn
 SITE_URL=https://modrinth.com
 CDN_URL=https://cdn.modrinth.com
 LABRINTH_ADMIN_KEY=feedbeef
+RATE_LIMIT_IGNORE_KEY=feedbeef
 
 MODERATION_DISCORD_WEBHOOK=
 CLOUDFLARE_INTEGRATION=false
