Secure auth route, fix quilt deps bug, optimize queries more

--- a/.env
+++ b/.env
@@ -41,3 +41,5 @@ GITHUB_CLIENT_SECRET=none
 RATE_LIMIT_IGNORE_IPS='["127.0.0.1"]'
 
 WHITELISTED_MODPACK_DOMAINS='["cdn.modrinth.com", "edge.forgecdn.net", "github.com", "raw.githubusercontent.com"]'
+
+ALLOWED_CALLBACK_URLS='["localhost", ".modrinth.com", "modrinth.com", "-modrinth.vercel.app"]'
