--- a/.env
+++ b/.env
@@ -43,3 +43,6 @@ RATE_LIMIT_IGNORE_IPS='["127.0.0.1"]'
 WHITELISTED_MODPACK_DOMAINS='["cdn.modrinth.com", "edge.forgecdn.net", "github.com", "raw.githubusercontent.com"]'
 
 ALLOWED_CALLBACK_URLS='["localhost", ".modrinth.com", "-modrinth.vercel.app"]'
+
+ARIADNE_ADMIN_KEY=feedbeef
+ARIADNE_URL=https://staging-ariadne.modrinth.com/v1/
