--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ validator = { version = "0.14.0", features = ["derive"] }
 regex = "1.5.5"
 url = "2.2.2"
 urlencoding = "2.1.0"
+spdx = "0.9.0"
 
 gumdrop = "0.8.1"
 dotenv = "0.15.0"
