--- a/.env
+++ b/.env
@@ -42,7 +42,10 @@ RATE_LIMIT_IGNORE_IPS='["127.0.0.1"]'
 
 WHITELISTED_MODPACK_DOMAINS='["cdn.modrinth.com", "edge.forgecdn.net", "github.com", "raw.githubusercontent.com"]'
 
-ALLOWED_CALLBACK_URLS='["localhost", ".modrinth.com", "-modrinth.vercel.app"]'
+ALLOWED_CALLBACK_URLS='["localhost", ".modrinth.com"]'
 
 ARIADNE_ADMIN_KEY=feedbeef
 ARIADNE_URL=https://staging-ariadne.modrinth.com/v1/
+
+STRIPE_TOKEN=none
+STRIPE_WEBHOOK_SECRET=none
