--- a/.env
+++ b/.env
@@ -18,25 +18,25 @@ MEILISEARCH_KEY=modrinth
 BIND_ADDR=127.0.0.1:8000
 MOCK_FILE_PATH=/tmp/modrinth
 
-STORAGE_BACKEND=s3
+STORAGE_BACKEND=local
 
 BACKBLAZE_KEY_ID=none
 BACKBLAZE_KEY=none
 BACKBLAZE_BUCKET_ID=none
 
-S3_ACCESS_TOKEN=0046a4d81c813da0000000005
-S3_SECRET=K004N7nYz0XSUAcncy5iltCoUoNBLFc
-S3_URL= s3.us-west-004.backblazeb2.com
-S3_REGION=us-west-004
-S3_BUCKET_NAME=modrinth-cdn-staging
+S3_ACCESS_TOKEN=none
+S3_SECRET=none
+S3_URL=none
+S3_REGION=none
+S3_BUCKET_NAME=none
 
 # 1 hour
 LOCAL_INDEX_INTERVAL=3600
 # 30 minutes
 VERSION_INDEX_INTERVAL=1800
 
-GITHUB_CLIENT_ID=873e1f2db86d89306227
-GITHUB_CLIENT_SECRET=0c84b3b2e92a6c3a6cf22f87c89501f4c8952b9f
+GITHUB_CLIENT_ID=none
+GITHUB_CLIENT_SECRET=none
 
 RATE_LIMIT_IGNORE_IPS='["127.0.0.1"]'
 
