--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ xml-rs = "0.8.4"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_with = "1.12.0"
-chrono = { version = "0.4.19", features = ["serde"]}
+chrono = { version = "0.4.22", default-features = false, features = ["clock", "serde", "std"] }
 rand = "0.8.5"
 base64 = "0.13.0"
 sha1 = { version = "0.6.1", features = ["std"] }
@@ -45,7 +45,7 @@ url = "2.2.2"
 urlencoding = "2.1.0"
 
 gumdrop = "0.8.1"
-dotenv = "0.15.0"
+dotenvy = "0.15.6"
 log = "0.4.16"
 env_logger = "0.9.0"
 thiserror = "1.0.30"
