--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ actix = "0.13.0"
 actix-web = "4.2.1"
 actix-rt = "2.7.0"
 actix-multipart = "0.4.0"
-actix-cors = "0.6.3"
+actix-cors = "0.6.4"
 
 tokio = { version = "1.21.2", features = ["sync"] }
 tokio-stream = "0.1.10"
@@ -60,7 +60,7 @@ validator = { version = "0.16.0", features = ["derive"] }
 regex = "1.6.0"
 censor = "0.2.0"
 
-dotenv = "0.15.0"
+dotenvy = "0.15.6"
 log = "0.4.17"
 env_logger = "0.9.1"
 thiserror = "1.0.37"
