--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,7 +56,7 @@ zip = { git = "https://github.com/zip-rs/zip", rev = "bb230ef56adc13436d1fcdfaa4
 
 itertools = "0.10.5"
 
-validator = { version = "0.16.0", features = ["derive"] }
+validator = { version = "0.16.0", features = ["derive", "phone"] }
 regex = "1.6.0"
 censor = "0.2.0"
 
