FlameAnvil Project Sync

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 DEBUG=true
 RUST_LOG=info,sqlx::query=warn
 
+SENTRY_DSN=none
+
 SITE_URL=https://modrinth.com
 CDN_URL=https://staging-cdn.modrinth.com
 LABRINTH_ADMIN_KEY=feedbeef
