--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "labrinth"
-version = "2.5.0"
+version = "2.6.0"
 authors = ["geometrically <jai@modrinth.com>"]
 edition = "2018"
 license = "AGPL-3.0"
@@ -29,7 +29,7 @@ lazy_static = "1.4.0"
 
 meilisearch-sdk = "0.15.0"
 rust-s3 = "0.32.3"
-reqwest = { version = "0.11.12", features = ["json"] }
+reqwest = { version = "0.11.12", features = ["json", "multipart"] }
 
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
@@ -67,3 +67,6 @@ thiserror = "1.0.37"
 
 sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "postgres", "chrono", "offline", "macros", "migrate", "decimal"] }
 rust_decimal = { version = "1.26", features = ["serde-with-float", "serde-with-str"] }
+
+sentry = "0.28.0"
+sentry-actix = "0.28.0"
