Public discord webhook

--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ LABRINTH_ADMIN_KEY=feedbeef
 RATE_LIMIT_IGNORE_KEY=feedbeef
 
 MODERATION_DISCORD_WEBHOOK=
+PUBLIC_DISCORD_WEBHOOK=
 CLOUDFLARE_INTEGRATION=false
 
 DATABASE_URL=postgresql://labrinth:labrinth@localhost/labrinth
