--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,7 +66,7 @@ log = "0.4.17"
 env_logger = "0.9.1"
 thiserror = "1.0.37"
 
-sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "postgres", "chrono", "offline", "macros", "migrate", "decimal"] }
+sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "postgres", "chrono", "offline", "macros", "migrate", "decimal", "json"] }
 rust_decimal = { version = "1.26", features = ["serde-with-float", "serde-with-str"] }
 
 sentry = "0.28.0"
