--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.gitignore.io/api/rust,clion
 # Edit at https://www.gitignore.io/?templates=rust,clion
 
@@ -107,3 +106,4 @@ fabric.properties
 
 # End of https://www.gitignore.io/api/rust,clion
 
+.DS_Store
