--- a/.env
+++ b/.env
@@ -23,6 +23,7 @@ MOCK_FILE_PATH=/tmp/modrinth
 
 MINOS_URL=http://127.0.0.1:4000
 KRATOS_URL=http://127.0.0.1:4433
+ORY_AUTH_BEARER=none
 
 STORAGE_BACKEND=local
 
