--- a/.env
+++ b/.env
@@ -21,8 +21,8 @@ MEILISEARCH_KEY=modrinth
 BIND_ADDR=127.0.0.1:8000
 MOCK_FILE_PATH=/tmp/modrinth
 
-MINOS_URL=http://127.0.0.1:4000
-KRATOS_URL=http://127.0.0.1:4433
+MINOS_URL=https://staging-minos.modrinth.com
+KRATOS_URL=https://staging.kratos.modrinth.com
 ORY_AUTH_BEARER=none
 
 STORAGE_BACKEND=local
@@ -49,7 +49,7 @@ RATE_LIMIT_IGNORE_IPS='["127.0.0.1"]'
 
 WHITELISTED_MODPACK_DOMAINS='["cdn.modrinth.com", "edge.forgecdn.net", "github.com", "raw.githubusercontent.com"]'
 
-ALLOWED_CALLBACK_URLS='["localhost", ".modrinth.com", "127.0.0.1"]'
+ALLOWED_CALLBACK_URLS='["localhost", ".modrinth.com"]'
 
 ARIADNE_ADMIN_KEY=feedbeef
 ARIADNE_URL=https://staging-ariadne.modrinth.com/v1/
