scopes into an i64, name

--- a/.env
+++ b/.env
@@ -21,8 +21,8 @@ MEILISEARCH_KEY=modrinth
 BIND_ADDR=127.0.0.1:8000
 MOCK_FILE_PATH=/tmp/modrinth
 
-MINOS_URL=https://staging-minos.modrinth.com
-KRATOS_URL=https://staging.kratos.modrinth.com
+MINOS_URL=http://127.0.0.1:4000
+KRATOS_URL=http://127.0.0.1:4433
 ORY_AUTH_BEARER=none
 
 STORAGE_BACKEND=local
