--- a/.env
+++ b/.env
@@ -49,7 +49,7 @@ RATE_LIMIT_IGNORE_IPS='["127.0.0.1"]'
 
 WHITELISTED_MODPACK_DOMAINS='["cdn.modrinth.com", "edge.forgecdn.net", "github.com", "raw.githubusercontent.com"]'
 
-ALLOWED_CALLBACK_URLS='["localhost", ".modrinth.com"]'
+ALLOWED_CALLBACK_URLS='["localhost", ".modrinth.com", "127.0.0.1"]'
 
 ARIADNE_ADMIN_KEY=feedbeef
 ARIADNE_URL=https://staging-ariadne.modrinth.com/v1/
