--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,8 @@ thiserror = "1.0.38"
 
 sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "postgres", "chrono", "offline", "macros", "migrate", "decimal", "json"] }
 rust_decimal = { version = "1.28.1", features = ["serde-with-float", "serde-with-str"] }
+redis = { version = "0.23.0", features = ["tokio-comp", "ahash", "r2d2"]}
+deadpool-redis = "0.12.0"
 
 sentry = { version = "0.30.0", features = ["profiling"] }
 sentry-actix = "0.30.0"
