--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,14 @@ services:
       - meilisearch-data:/meili_data
     environment:
       MEILI_MASTER_KEY: modrinth
+  redis:
+    image: redis:alpine
+    restart: on-failure
+    ports:
+      - '6379:6379'
+    volumes:
+      - redis-data:/data
 volumes:
   meilisearch-data:
   db-data:
+  redis-data:
