--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ MEILISEARCH_ADDR=http://localhost:7700
 MEILISEARCH_KEY=modrinth
 
 BIND_ADDR=127.0.0.1:8000
-SELF_ADDR=0.0.0.0:8000
+SELF_ADDR=http://0.0.0.0:8000
 MOCK_FILE_PATH=/tmp/modrinth
 
 MINOS_URL=http://127.0.0.1:4000
