--- a/.env
+++ b/.env
@@ -15,6 +15,9 @@ CLOUDFLARE_INTEGRATION=false
 DATABASE_URL=postgresql://labrinth:labrinth@localhost/labrinth
 DATABASE_MIN_CONNECTIONS=0
 DATABASE_MAX_CONNECTIONS=16
+
+REDIS_URL=redis://localhost
+
 MEILISEARCH_ADDR=http://localhost:7700
 MEILISEARCH_KEY=modrinth
 
@@ -53,9 +56,6 @@ ALLOWED_CALLBACK_URLS='["localhost", ".modrinth.com", "127.0.0.1"]'
 
 ARIADNE_ADMIN_KEY=feedbeef
 ARIADNE_URL=https://staging-ariadne.modrinth.com/v1/
-
-STRIPE_TOKEN=none
-STRIPE_WEBHOOK_SECRET=none
 
 PAYPAL_API_URL=https://api-m.sandbox.paypal.com/v1/
 PAYPAL_CLIENT_ID=none
