Begin work on new auth flows

--- a/.env
+++ b/.env
@@ -22,12 +22,7 @@ MEILISEARCH_ADDR=http://localhost:7700
 MEILISEARCH_KEY=modrinth
 
 BIND_ADDR=127.0.0.1:8000
-SELF_ADDR=http://127.0.0.1:8000
 MOCK_FILE_PATH=/tmp/modrinth
-
-MINOS_URL=http://127.0.0.1:4000
-KRATOS_URL=http://127.0.0.1:4433
-ORY_AUTH_BEARER=none
 
 STORAGE_BACKEND=local
 
@@ -46,9 +41,6 @@ LOCAL_INDEX_INTERVAL=3600
 # 30 minutes
 VERSION_INDEX_INTERVAL=1800
 
-GITHUB_CLIENT_ID=none
-GITHUB_CLIENT_SECRET=none
-
 RATE_LIMIT_IGNORE_IPS='["127.0.0.1"]'
 
 WHITELISTED_MODPACK_DOMAINS='["cdn.modrinth.com", "edge.forgecdn.net", "github.com", "raw.githubusercontent.com"]'
@@ -61,3 +53,21 @@ ARIADNE_URL=https://staging-ariadne.modrinth.com/v1/
 PAYPAL_API_URL=https://api-m.sandbox.paypal.com/v1/
 PAYPAL_CLIENT_ID=none
 PAYPAL_CLIENT_SECRET=none
+
+GITHUB_CLIENT_ID=none
+GITHUB_CLIENT_SECRET=none
+
+GITLAB_CLIENT_ID=none
+GITLAB_CLIENT_SECRET=none
+
+DISCORD_CLIENT_ID=none
+DISCORD_CLIENT_SECRET=none
+
+MICROSOFT_CLIENT_ID=none
+MICROSOFT_CLIENT_SECRET=none
+
+GOOGLE_CLIENT_ID=none
+GOOGLE_CLIENT_SECRET=none
+
+APPLE_CLIENT_ID=none
+APPLE_CLIENT_SECRET=none
