Finish all auth flows

--- a/.env
+++ b/.env
@@ -22,6 +22,7 @@ MEILISEARCH_ADDR=http://localhost:7700
 MEILISEARCH_KEY=modrinth
 
 BIND_ADDR=127.0.0.1:8000
+SELF_ADDR=http://localhost:8000
 MOCK_FILE_PATH=/tmp/modrinth
 
 STORAGE_BACKEND=local
@@ -69,5 +70,4 @@ MICROSOFT_CLIENT_SECRET=none
 GOOGLE_CLIENT_ID=none
 GOOGLE_CLIENT_SECRET=none
 
-APPLE_CLIENT_ID=none
-APPLE_CLIENT_SECRET=none
+STEAM_API_KEY=none
