--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,9 +64,8 @@ log = "0.4.17"
 env_logger = "0.10.0"
 thiserror = "1.0.38"
 
-sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "postgres", "chrono", "offline", "macros", "migrate", "decimal", "json", "uuid"] }
+sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "postgres", "chrono", "offline", "macros", "migrate", "decimal", "json"] }
 rust_decimal = { version = "1.28.1", features = ["serde-with-float", "serde-with-str"] }
-uuid = { version = "1.3.4", features = ["serde"] }
 redis = { version = "0.23.0", features = ["tokio-comp", "ahash", "r2d2"]}
 deadpool-redis = "0.12.0"
 
