--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ yaserde_derive = "0.8.0"
 xml-rs = "0.8.4"
 
 rand = "0.8.5"
+rand_chacha = "0.3.1"
 bytes = "1.4.0"
 base64 = "0.21.0"
 sha1 = { version = "0.6.1", features = ["std"] }
@@ -74,3 +75,5 @@ sentry-actix = "0.30.0"
 
 image = "0.24.5"
 color-thief = "0.2.2"
+
+woothee = "0.13.0"
