--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,8 +45,10 @@ base64 = "0.21.2"
 sha1 = { version = "0.6.1", features = ["std"] }
 sha2 = "0.9.9"
 hmac = "0.11.0"
+argon2 = { version = "0.5.0", features = ["std"] }
 bitflags = "1.3.2"
 hex = "0.4.3"
+zxcvbn = "2.2.2"
 
 url = "2.4.0"
 urlencoding = "2.1.2"
