--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ argon2 = { version = "0.5.0", features = ["std"] }
 bitflags = "1.3.2"
 hex = "0.4.3"
 zxcvbn = "2.2.2"
+totp-rs = "5.0.2"
 
 url = "2.4.0"
 urlencoding = "2.1.2"
