--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 DEBUG=true
 RUST_LOG=info,sqlx::query=warn
-
 SENTRY_DSN=none
 
 SITE_URL=https://modrinth.com
@@ -8,24 +7,25 @@ CDN_URL=https://staging-cdn.modrinth.com
 LABRINTH_ADMIN_KEY=feedbeef
 RATE_LIMIT_IGNORE_KEY=feedbeef
 
-MODERATION_DISCORD_WEBHOOK=
-PUBLIC_DISCORD_WEBHOOK=
-CLOUDFLARE_INTEGRATION=false
-
 DATABASE_URL=postgresql://labrinth:labrinth@localhost/labrinth
 DATABASE_MIN_CONNECTIONS=0
 DATABASE_MAX_CONNECTIONS=16
 
-REDIS_URL=redis://localhost
-
 MEILISEARCH_ADDR=http://localhost:7700
 MEILISEARCH_KEY=modrinth
 
+REDIS_URL=redis://localhost
+
 BIND_ADDR=127.0.0.1:8000
 SELF_ADDR=http://localhost:8000
-MOCK_FILE_PATH=/tmp/modrinth
+
+MODERATION_DISCORD_WEBHOOK=
+PUBLIC_DISCORD_WEBHOOK=
+CLOUDFLARE_INTEGRATION=false
 
 STORAGE_BACKEND=local
+
+MOCK_FILE_PATH=/tmp/modrinth
 
 BACKBLAZE_KEY_ID=none
 BACKBLAZE_KEY=none
@@ -73,3 +73,10 @@ GOOGLE_CLIENT_SECRET=none
 STEAM_API_KEY=none
 
 TURNSTILE_SECRET=none
+
+SMTP_USERNAME=none
+SMTP_PASSWORD=none
+SMTP_HOST=none
+
+SITE_VERIFY_EMAIL_PATH=none
+SITE_RESET_PASSWORD_PATH=none
