--- a/.env
+++ b/.env
@@ -48,9 +48,6 @@ WHITELISTED_MODPACK_DOMAINS='["cdn.modrinth.com", "edge.forgecdn.net", "github.c
 
 ALLOWED_CALLBACK_URLS='["localhost", ".modrinth.com", "127.0.0.1"]'
 
-ARIADNE_ADMIN_KEY=feedbeef
-ARIADNE_URL=https://staging-ariadne.modrinth.com/v1/
-
 PAYPAL_API_URL=https://api-m.sandbox.paypal.com/v1/
 PAYPAL_CLIENT_ID=none
 PAYPAL_CLIENT_SECRET=none
@@ -83,3 +80,10 @@ SITE_RESET_PASSWORD_PATH=none
 
 BEEHIIV_PUBLICATION_ID=none
 BEEHIIV_API_KEY=none
+
+CLICKHOUSE_URL=http:/localhost:8123
+CLICKHOUSE_USER=default
+CLICKHOUSE_PASSWORD=
+CLICKHOUSE_DATABASE=staging_ariadne
+
+MAXMIND_LICENSE_KEY=none
