--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ actix-web = "4.3.1"
 actix-rt = "2.8.0"
 actix-multipart = "0.6.0"
 actix-cors = "0.6.4"
+actix-ws = "0.2.5"
+actix-files = "0.6.2"
 
 tokio = { version = "1.29.1", features = ["sync"] }
 tokio-stream = "0.1.14"
