--- a/.env
+++ b/.env
@@ -44,7 +44,7 @@ VERSION_INDEX_INTERVAL=1800
 
 RATE_LIMIT_IGNORE_IPS='["127.0.0.1"]'
 
-WHITELISTED_MODPACK_DOMAINS='["cdn.modrinth.com", "edge.forgecdn.net", "github.com", "raw.githubusercontent.com"]'
+WHITELISTED_MODPACK_DOMAINS='["cdn.modrinth.com", "github.com", "raw.githubusercontent.com"]'
 
 ALLOWED_CALLBACK_URLS='["localhost", ".modrinth.com", "127.0.0.1"]'
 
@@ -81,9 +81,13 @@ SITE_RESET_PASSWORD_PATH=none
 BEEHIIV_PUBLICATION_ID=none
 BEEHIIV_API_KEY=none
 
+ANALYTICS_ALLOWED_ORIGINS='["http://127.0.0.1:3000", "http://localhost:3000", "https://modrinth.com", "https://www.modrinth.com", "*"]'
+
 CLICKHOUSE_URL=http:/localhost:8123
 CLICKHOUSE_USER=default
 CLICKHOUSE_PASSWORD=
 CLICKHOUSE_DATABASE=staging_ariadne
 
 MAXMIND_LICENSE_KEY=none
+
+PAYOUTS_BUDGET=100
