--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@ MEILISEARCH_ADDR=http://localhost:7700
 MEILISEARCH_KEY=modrinth
 
 REDIS_URL=redis://localhost
+REDIS_MAX_CONNECTIONS=10000
 
 BIND_ADDR=127.0.0.1:8000
 SELF_ADDR=http://localhost:8000
