most of trolley

--- a/.env
+++ b/.env
@@ -49,9 +49,9 @@ WHITELISTED_MODPACK_DOMAINS='["cdn.modrinth.com", "github.com", "raw.githubuserc
 
 ALLOWED_CALLBACK_URLS='["localhost", ".modrinth.com", "127.0.0.1"]'
 
-PAYPAL_API_URL=https://api-m.sandbox.paypal.com/v1/
-PAYPAL_CLIENT_ID=none
-PAYPAL_CLIENT_SECRET=none
+TROLLEY_ACCESS_KEY=none
+TROLLEY_SECRET_KEY=none
+TROLLEY_WEBHOOK_SIGNATURE=none
 
 GITHUB_CLIENT_ID=none
 GITHUB_CLIENT_SECRET=none
