--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,6 @@ actix-multipart = "0.6.0"
 actix-cors = "0.6.4"
 actix-ws = "0.2.5"
 actix-files = "0.6.2"
-actix-http = "3.4.0"
 
 tokio = { version = "1.29.1", features = ["sync"] }
 tokio-stream = "0.1.14"
@@ -93,3 +92,6 @@ color-thief = "0.2.2"
 woothee = "0.13.0"
 
 lettre = "0.10.4"
+
+[dev-dependencies]
+actix-http = "3.4.0"
