--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,7 @@ sha1 = { version = "0.6.1", features = ["std"] }
 sha2 = "0.9.9"
 hmac = "0.11.0"
 argon2 = { version = "0.5.0", features = ["std"] }
-bitflags = "1.3.2"
+bitflags = { version = "2.4.0", features = ["serde"] }
 hex = "0.4.3"
 zxcvbn = "2.2.2"
 totp-rs = { version = "5.0.2", features = ["gen_secret"] }
