--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ sha2 = "0.9.9"
 hmac = "0.11.0"
 argon2 = { version = "0.5.0", features = ["std"] }
 bitflags = { version = "2.4.0", features = ["serde"] }
+bitflags-serde-legacy = "0.1.1"
 hex = "0.4.3"
 zxcvbn = "2.2.2"
 totp-rs = { version = "5.0.2", features = ["gen_secret"] }
@@ -96,7 +97,7 @@ maxminddb = "0.23.0"
 flate2 = "1.0.25"
 tar = "0.4.38"
 
-sentry = { version = "0.31.5", features = ["profiling"] }
+sentry = { version = "0.31.5" }
 sentry-actix = "0.31.5"
 
 image = "0.24.6"
