--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,7 @@ sha1 = { version = "0.6.1", features = ["std"] }
 sha2 = "0.9.9"
 hmac = "0.11.0"
 argon2 = { version = "0.5.0", features = ["std"] }
-bitflags = { version = "2.4.0", features = ["serde"] }
+bitflags = "2.4.0"
 bitflags-serde-legacy = "0.1.1"
 hex = "0.4.3"
 zxcvbn = "2.2.2"
