--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,25 +1,7 @@
-name: Unit Tests
-
-on:
-  push:
-    branches: [master]
-  pull_request:
-    branches:
-      - master
-
-env:
-  CARGO_TERM_COLOR: always
-  SQLX_OFFLINE: true
-
 jobs:
   test:
-    name: ${{ matrix.os }}-rust-${{ matrix.rust }}
-    runs-on: ${{ matrix.os }}
-    continue-on-error: ${{ matrix.rust != 'stable' }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        rust: [beta, nightly, stable]
+    name: ubuntu-latest-rust-stable
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
@@ -32,7 +14,7 @@ jobs:
         name: Install toolchain
         with:
           profile: minimal
-          toolchain: ${{ matrix.rust }}
+          toolchain: stable
           override: true
 
       # Cache dependencies and build artifacts
@@ -43,7 +25,7 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          key: ubuntu-latest-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - uses: actions-rs/cargo@v1
         with:
